# user-identification-manager

./: CONTRIBUTING.md  README.md  meson.build  meson_options.txt
data/: com.luxoft.UserIdentificationManager.conf  com.luxoft.UserIdentificationManager.service  com.luxoft.UserIdentificationManager.xml  meson.build  user-identification-manager.service.in
src/: config.h.in  meson.build
src/cli/: arguments.cpp  arguments.h  main.cpp  meson.build  run.cpp  run.h
src/cli/unit_tests/: arguments_test.cpp  meson.build
src/common/: dbus.h  meson.build  scoped_silent_log_handler.h  scoped_temp_file.cpp  scoped_temp_file.h  version.h.in
src/common/unit_tests/: meson.build  scoped_temp_file_test.cpp
src/daemon/: arguments.cpp  arguments.h  configuration.cpp  configuration.h  daemon.cpp  daemon.h  dbus_service.cpp  dbus_service.h  id_source.cpp  id_source.h  idle_queue.h  main.cpp  meson.build  pcsc_context.cpp  pcsc_context.h  string.cpp  string.h
src/daemon/id_sources/: mass_storage_device_id_source.cpp  mass_storage_device_id_source.h  smart_card_id_source.cpp  smart_card_id_source.h
src/daemon/unit_tests/: arguments_test.cpp  configuration_test.cpp  id_source_test.cpp  idle_queue_test.cpp  meson.build  string_test.cpp
src/daemon/unit_tests/id_sources/: mass_storage_device_id_source_test.cpp
tools/ci/: Dockerfile  Jenkinsfile
